all but encode fast works and printing out the stats